# llvm-forth

./: Cargo.toml  LICENSE  README.md  machine.bc  machine.ll
src/: ast.rs  compiler.rs  main.rs  parser.lalrpop
